@@ -31,7 +31,7 @@ public:
   PicmixEffect() {
     readDir = "";
     readVersion = "0";
-    options.put("dir","picmix");
+    options.put("dir","pm/pm_web2");
     options.put("version",0);
     needRead = false;
     reconfigure(options);
